feat: adding coverage show